# egile-agent-prospectfinder

./: .gitignore  ARCHITECTURE.md  COMPLETE_SETUP.md  INSTALL.md  LICENSE  MIGRATION_TO_AGNO.md  PACKAGE_STRUCTURE.md  QUICKREF.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  example.py  install.bat  install.sh  pyproject.toml  start.bat  start.sh  test_plugin_integration.py
src/egile_agent_prospectfinder/: __init__.py  __main__.py  mcp_client.py  plugin.py  run_agent.py  run_mcp.py  run_server.py
tests/: test_plugin.py
